typescript/checker/tests/conformance/expressions/functionCalls/callOverload.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            149,
        ),
        hi: BytePos(
            150,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/functionCalls/callOverload.ts:4:5
  |
4 | var n: number[];
  |     ^

